--- a/client/src/components/DishForm/dishForm.css
+++ b/client/src/components/DishForm/dishForm.css
@@ -1,3 +1,40 @@
 /* .dishForm {
   
 } */
+
+.dishForm {
+  position: fixed;
+  display: flex;
+  right: 0;
+  justify-content: center;
+  flex-direction: column;
+  margin: 0 6vw;
+  height: 60vh; 
+  max-width: 25vw;
+}
+
+  label {
+    font-weight: 550;
+    margin-bottom: 0.5vw;
+  }
+
+  input {
+    font-size: 1rem;
+    margin-bottom: 1vw;
+    padding: 1vh;
+    height: 2.5rem;
+    width: inherit;
+    border: 0.5px solid #eee;
+    border-radius: 7px;
+    outline: none;
+  }
+
+  .add-dish-btn {
+    border-radius: 7px;
+    border: 0.5px solid #eee;
+    background-color: #fFA500;
+    height: 3rem;
+    font-weight: 600;
+    color: white;
+    border: none;
+  }
