--- a/client/src/components/DishForm/dishForm.css
+++ b/client/src/components/DishForm/dishForm.css
@@ -32,7 +32,7 @@
   .add-dish-btn {
     border-radius: 7px;
     border: 0.5px solid #eee;
-    background-color: #fFA500;
+    background-color: blue;
     height: 3rem;
     font-weight: 600;
     color: white;
