--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,20 +1,27 @@
-/* * {
+* {
 box-sizing: border-box;
-}
+} 
 
-body {
+ body {
   overflow-x: hidden;
+ }
+
+.content {
+  overflow-x: scroll;
+} 
+
+.content::-webkit-scrollbar { 
+  display: none;  /* Safari and Chrome */
 }
 
-
-.App {
+ /* .App {
   height: 100vh;
   width: 100vw;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top center;
-}
-
+} */
+/* 
 .App-content {
   height: 100%;
   display: flex;
@@ -22,9 +29,9 @@ body {
   justify-content: flex-start;
   align-items: center;
   padding: 40px;
-}
+} */
 
-@media (min-width: 650px ) {
+/* @media (min-width: 650px ) {
   .App {
       background-position: center center;
   }
@@ -33,4 +40,4 @@ body {
       align-items: flex-end;
       justify-content: center;
   }
-} */
+}    */
