--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,6 +8,7 @@ box-sizing: border-box;
 
 .content {
   overflow-x: scroll;
+  font-family: 'Noto Sans JP', sans-serif;
 } 
 
 .content::-webkit-scrollbar { 
