--- a/client/src/components/OrderForm/orderForm.css
+++ b/client/src/components/OrderForm/orderForm.css
@@ -43,15 +43,19 @@ padding-top: 1%;
 h2 {
   font-family: 'Noto Sans JP', sans-serif;
   font-size: 48px;
+  color: #8dc1c3;
 }
 
+.title-order{
+  padding-bottom: 1px;
+}
 
 h3 {
   font-family: 'Noto Sans JP', sans-serif;
   font-size: 43px;
 }
 p {
-  font-size: 28px;
+  font-size: 23px;
 }
 
 .container{
@@ -62,7 +66,7 @@ p {
   margin: 0 auto;
   /* background: -webkit-linear-gradient(90deg, #f8ecec, #dae2f8);  Chrome 10-25, Safari 5.1-6 */
   /* background-image: url("/home/yanira/CodeworksSenior/soloProject/happyKitchen/client/src/img/color-azul.jpg"); */
-background-color: #b9dcd6;
+
 }
 
 .checkbox {
@@ -81,11 +85,32 @@ input .checkbox {
     min-width: 10px;
   }
 
-  .input-container {
+
+  .input-field-container {
     padding: 15px 20px;
+    background-color: #8dc1c3;
+
   }
 }
 
+.contact-details {
+  font-family: 'Noto Sans JP', sans-serif;
+  font-size: 48px;
+  color: #8dc1c3;
+  padding-bottom: 10px;
+}
+
+.send-button {
+  border-radius: 7px;
+  border: 0.5px solid #eee;
+  background-color:  #8dc1c3;
+  height: 3rem;
+  width: 50%;
+  font-weight: 600;
+  color: white;
+  border: none;
+  box-shadow: rgb(44, 41, 41);
+}
 /* .input-field-container {
   display: flex;
   flex-direction: column;
