--- a/client/src/components/MenuForm/menuForm.css
+++ b/client/src/components/MenuForm/menuForm.css
@@ -6,21 +6,16 @@
   overflow-y: scroll;
 }
 
-label {
-  /* justify-content: center; */
-}
 
 .menu-title {
   padding-top: 1%;
   border-radius: 0.5px solid black;
-  background-color: #8dc1c3;
+  background-color: #f8d537;
   /* background: -webkit-linear-gradient(90deg, #cac4c4, #8dc1c3);  Chrome 10-25, Safari 5.1-6 */
   height: 100px;
 }
 
-.menu-item{
-  margin-bottom: 10px;
-}
+
 
 .checkbox {
   height: 23px;
@@ -35,7 +30,7 @@ label {
 .onSubmit {
     border-radius: 7px;
     border: 0.5px solid #eee;
-    background-color: #8dc1c3;
+    background-color: #f8d537;
     height: 2rem;
     width: 15%;
     font-weight: 600;
@@ -44,3 +39,27 @@ label {
     box-shadow: rgb(44, 41, 41);
     padding-bottom: 3%;
   }
+
+  .menu-item{
+    
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    margin-top: 30px;
+}
+
+  .dish {
+    background-color: white;
+    /* width: 60%;
+    margin: 80px auto; */
+    /* height: 200px; */
+    box-shadow: 2px 3px 2px 3px  #888888;
+    /* display: flex; */
+    margin: 20px 60px 50px 60px;
+    width: 450px;
+    height: 350px;
+padding: 10px;
+
+  }
+
+  
