--- a/client/src/components/OrderForm/orderForm.css
+++ b/client/src/components/OrderForm/orderForm.css
@@ -50,7 +50,7 @@ input .checkbox {
   .input-field-container {
     padding: 15px 20px;
     background-color: #8dc1c3;
-
+    margin-bottom: 300px;
   }
 }
 
@@ -59,6 +59,7 @@ input .checkbox {
   font-size: 48px;
   color: #8dc1c3;
   padding-bottom: 10px;
+ 
 }
 
 .send-button {
@@ -77,7 +78,7 @@ input .checkbox {
   background-color: white;
   width: 450px;
   height: 350px;
-  margin: 10px 60px 180px 60px;
+  margin: 5px 60px 20px 60px;
   /* height: 200px; */
   box-shadow: 2px 3px 2px 3px  #888888;
   padding: 5px 10px;
@@ -87,4 +88,7 @@ input .checkbox {
 .elem-dish {
   display: flex;
   flex-wrap: wrap;
+  margin-top: 15px;
+  margin-bottom: 150px;
+  justify-content: space-around;
 }
