final version solo project

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -12,33 +12,5 @@ box-sizing: border-box;
 } 
 
 .content::-webkit-scrollbar { 
-  display: none;  /* Safari and Chrome */
+  display: none; 
 }
-
- /* .App {
-  height: 100vh;
-  width: 100vw;
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: top center;
-} */
-/* 
-.App-content {
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  padding: 40px;
-} */
-
-/* @media (min-width: 650px ) {
-  .App {
-      background-position: center center;
-  }
-
-  .App-content {
-      align-items: flex-end;
-      justify-content: center;
-  }
-}    */
