--- a/client/src/components/MenuSaved/MenuSaved.css
+++ b/client/src/components/MenuSaved/MenuSaved.css
@@ -1,21 +1,19 @@
-.container-menuSaved{
-background-image: url("/home/yanira/CodeworksSenior/soloProject/happyKitchen/client/src/img/undraw_confirmed_81ex.svg");
-height: 70vh; 
+.container-menuSaved {
+  background-image: url('../../img/undraw_confirmed_81ex.svg');
+  height: 70vh;
 
-padding-top: 4%;
-background-repeat:no-repeat;
-overflow-y: hidden;
-margin: 80px;
+  padding-top: 4%;
+  background-repeat: no-repeat;
+  overflow-y: hidden;
+  margin: 80px;
 }
 
-
- h2 {
+h2 {
   font-family: 'Noto Sans JP', sans-serif;
- }
+}
 
- .text-menu {
-   position: fixed;
-   top: 380px;
-   left: 900px;
-
- } 
+.text-menu {
+  position: fixed;
+  top: 380px;
+  left: 900px;
+}
