--- a/client/src/components/DishSaved/DishSaved.css
+++ b/client/src/components/DishSaved/DishSaved.css
@@ -1,5 +1,5 @@
 .container-dishSaved {
-  background-image: url('/Users/djolosc/Desktop/happyKitchen/client/src/img/dish.png');
+  background-image: url('../../img/dish.png');
   height: 70vh;
 
   padding-top: 4%;
