--- a/client/src/components/GetStarted/getStarted.css
+++ b/client/src/components/GetStarted/getStarted.css
@@ -1,5 +1,5 @@
 .container-home {
-  background-image: url('/Users/djolosc/Desktop/happyKitchen/client/src/img/background-easykitchen-1.jpg');
+  background-image: url('../../img/background-easykitchen-1.jpg');
   height: calc(100vh - 112px);
   font-family: 'Noto Sans JP', sans-serif;
   font-size: 100px;
